--- a/.github/workflows/tests-sync.yml
+++ b/.github/workflows/tests-sync.yml
@@ -3,12 +3,12 @@ on:
   workflow_dispatch:
     inputs:
       block_ranges:
-        description: 'Optionally restrict to specific block ranges. Should be
-          formatted as multiple start block, such as "350000 50000 750000".
-          Defaults to all block ranges'
+        description: 'Block ranges: Format: "<start-block-1> <start-block-2>" 
+          Eg: "350000 50000 750000".
+          Default: All available ranges when empty'
         required: false
       name:
-        description: 'Workflow run custom name'
+        description: 'Custom name for the workflow run'
         required: false
   pull_request:
     branches:
@@ -34,7 +34,7 @@ jobs:
       run: ./make.sh ci-export-vars
 
     - name: Setup dependencies
-      run: sudo ./make.sh ci-setup-deps
+      run: ./make.sh ci-setup-deps
 
     - name: Setup dependencies for target
       run: ./make.sh ci-setup-deps-target
