Abstract user level installs out

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -54,8 +54,8 @@ jobs:
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
 
-    - name: Setup dependencies for target
-      run: ./make.sh ci-setup-deps-target
+    - name: Setup dependencies for user
+      run: ./make.sh ci-setup-user-deps
 
     - uses: Swatinem/rust-cache@v2
       with:
