--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -154,6 +154,7 @@ DEFI_TESTS =\
   test/txvalidation_tests.cpp \
   test/txvalidationcache_tests.cpp \
   test/uint256_tests.cpp \
+  test/utf8_string_tests.cpp \
   test/util_tests.cpp \
   test/validation_block_tests.cpp \
   test/versionbits_tests.cpp \
