--- a/.github/workflows/build-staging.yaml
+++ b/.github/workflows/build-staging.yaml
@@ -14,7 +14,9 @@ jobs:
       TARGET: x86_64-pc-linux-gnu
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        ref: master
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -34,7 +36,9 @@ jobs:
       TARGET: aarch64-linux-gnu
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        ref: master
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -54,7 +58,9 @@ jobs:
       TARGET: x86_64-w64-mingw32
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        ref: master
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -74,7 +80,9 @@ jobs:
       TARGET: x86_64-apple-darwin
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        ref: master
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -94,7 +102,9 @@ jobs:
       TARGET: aarch64-apple-darwin
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        ref: master
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -122,7 +132,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        ref: master
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
