--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -15,3 +15,7 @@ thiserror.workspace = true
 hex.workspace = true
 dftx-rs.workspace = true
 bitcoin.workspace = true
+tarpc = { version = "0.33", features = ["tokio1", "serde1", "serde-transport","tcp"] }
+tokio = { version = "1", features = ["full"] }
+serde_json = "1.0"
+json = "0.12.4"
