--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2021"
 tarpc = { version = "0.33", features = ["tokio1", "serde1", "serde-transport","tcp"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
-tokio-serde = {version="0.8.0", features = ["full"]}
+tokio-serde = { version = "0.8.0", features = ["json"] }
 log = "0.4"
