--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio-serde = { version = "0.8.0", features = ["json"] }
 log = "0.4"
+futures = "0.3.29"
