--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -20,3 +20,4 @@ tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
 json = "0.12.4"
 tokio-serde = {version="0.8.0", features = ["full"]}
+futures = "0.3.29"
