--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -35,7 +35,7 @@ jobs:
       TARGET: ${{matrix.target}}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
@@ -44,7 +44,7 @@ jobs:
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
       
-    - name: Setup dependencies
+    - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
     - name: Build depends
@@ -53,25 +53,37 @@ jobs:
     - name: Build package
       run: ./make.sh release
 
-    - name: Build defi image
-      if: ${{ env.TARGET == 'x86_64-pc-linux-gnu' }}
-      run: ./make.sh docker-defi-build
-
     - name: Publish artifact
       uses: actions/upload-artifact@v3
       with:
         name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
         path: ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}
 
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: [build]
+    env:
+      TARGET: x86_64-pc-linux-gnu
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download Binaries
+      uses: actions/download-artifact@v3
+      with:
+        name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
+        path: ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}
+
+    - name: Build defi image
+      run: ./make.sh docker-defi-build
+
     - name: Login to Docker Hub
-      if: ${{ env.TARGET == 'x86_64-pc-linux-gnu' }}
       uses: docker/login-action@v2
       with:
         username: ${{ env.DOCKER_HUB_USER }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
     - name: Push to Docker Hub
-      if: ${{ env.TARGET == 'x86_64-pc-linux-gnu' }}
       run: |
         set -e; ver=${{ env.BUILD_VERSION }}
         docker tag defichain-${{ env.TARGET }}:${ver} defi/defichain:${ver}
