--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -95,7 +95,7 @@ jobs:
         name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
 
     - name: Build defi image
-      run: ./make.sh docker-defi-build
+      run: rm .dockerignore && ./make.sh docker-defi-build
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
