--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -77,7 +77,7 @@ jobs:
         asset_name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}.SHA256
         asset_content_type: text/plain
 
-  docker-release:
+  create-docker-release:
     runs-on: ubuntu-latest
     needs: [create-release]
     env:
