--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -278,6 +278,7 @@ DEFI_CORE_H = \
   util/bytevectorhash.h \
   util/error.h \
   util/fees.h \
+  util/getuniquepath.h \
   util/system.h \
   util/moneystr.h \
   util/rbf.h \
@@ -699,6 +700,7 @@ libdefi_util_a_SOURCES = \
   util/bytevectorhash.cpp \
   util/error.cpp \
   util/fees.cpp \
+  util/getuniquepath.cpp \
   util/system.cpp \
   util/moneystr.cpp \
   util/rbf.cpp \
